; ModuleID = '/home/carl/AnghaBench/esp-idf/examples/system/ota/otatool/main/extr_otatool_main.c_app_main.c'
source_filename = "/home/carl/AnghaBench/esp-idf/examples/system/ota/otatool/main/extr_otatool_main.c_app_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@TAG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [17 x i8] c"OTA Tool Example\00", align 1
@.str.1 = private unnamed_addr constant [22 x i8] c"Running partition: %s\00", align 1
@.str.2 = private unnamed_addr constant [12 x i8] c"Example end\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @app_main() #0 {
  %1 = alloca %struct.TYPE_3__*, align 8
  %2 = load i32, i32* @TAG, align 4
  %3 = call i32 (i32, i8*, ...) @ESP_LOGI(i32 %2, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0))
  %4 = call %struct.TYPE_3__* (...) @esp_ota_get_running_partition()
  store %struct.TYPE_3__* %4, %struct.TYPE_3__** %1, align 8
  %5 = load i32, i32* @TAG, align 4
  %6 = load %struct.TYPE_3__*, %struct.TYPE_3__** %1, align 8
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call i32 (i32, i8*, ...) @ESP_LOGI(i32 %5, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.1, i64 0, i64 0), i32 %8)
  %10 = load i32, i32* @TAG, align 4
  %11 = call i32 (i32, i8*, ...) @ESP_LOGI(i32 %10, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.2, i64 0, i64 0))
  ret void
}

declare dso_local i32 @ESP_LOGI(i32, i8*, ...) #1

declare dso_local %struct.TYPE_3__* @esp_ota_get_running_partition(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
